--- a/02_docker/01_dockerfile/Dockerfile
+++ b/02_docker/01_dockerfile/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get install -y vim
 RUN apt-get install -y tcpdump
 RUN apt-get install -y cmake
 RUN apt-get install -y g++
+RUN apt-get install -y git
 
 WORKDIR /root
 
