Add 20241008 Log for Communication Application

--- a/04_source/CMakeLists.txt
+++ b/04_source/CMakeLists.txt
@@ -1,7 +1,29 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 
-# set the project name and version
-project(SampleSrc CXX)
+# specify the C++ standard
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_subdirectory(client)
-add_subdirectory(server)
+# set the project name and version
+project(ComApp CXX)
+
+# compile library file
+## status src library
+set(LOG_NAME
+    log/log.h
+    log/log.cpp
+    )
+add_library(Log STATIC ${LOG_NAME})
+
+# compile executable file
+add_executable(server server/server.cpp)
+add_executable(client client/client.cpp)
+
+# link to main
+target_link_libraries(server Log)
+target_link_libraries(client Log)
+
+# set include directory
+target_include_directories(server PRIVATE log)
+target_include_directories(client PRIVATE log)
+target_include_directories(Log INTERFACE log/log)
